--- a/mail_archives/i18n/fr.po
+++ b/mail_archives/i18n/fr.po
@@ -6,21 +6,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-30 09:30+0000\n"
-"PO-Revision-Date: 2021-12-30 10:33+0100\n"
+"POT-Creation-Date: 2021-12-30 10:09+0000\n"
+"PO-Revision-Date: 2021-12-30 11:05+0100\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
-"Language: fr\n"
 "X-Generator: Poedit 2.4.3\n"
 
 #. module: mail_archives
 #. openerp-web
 #: code:addons/mail_archives/static/src/js/archives.js:22
-#: code:addons/mail_archives/static/src/xml/menu.xml:12
 #, python-format
 msgid "Archive"
 msgstr "Archives"
@@ -31,3 +30,10 @@ msgstr "Archives"
 #, python-format
 msgid "Archive is empty"
 msgstr "Les archives sont vides"
+
+#. module: mail_archives
+#. openerp-web
+#: code:addons/mail_archives/static/src/xml/menu.xml:12
+#, python-format
+msgid "Archived"
+msgstr "Archivé"
